--- a/nodejs-oracle/package.json
+++ b/nodejs-oracle/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "-": "^0.0.1",
+    "dotenv": "^16.4.7",
     "g": "^2.0.1",
     "oracledb": "^6.7.1",
     "pm2": "^5.4.3",
